--- a/experimentation/unittests.tex
+++ b/experimentation/unittests.tex
@@ -1,4 +1,4 @@
-\section{Tests}
+\section{Software engineering tests}
 MultiChain is tested in several ways to verify it is correctly working
 following standard software engineering practices.
 These tests work similair to other tests used to test Tribler.
