--- a/problems/sybil.tex
+++ b/problems/sybil.tex
@@ -1,6 +1,6 @@
-\section{The Sybil Attack}
+\section{The Sybil attack}
 
-In this section we will explain the Sybil Attack\cite{douceur-sybil}
+In this section we will explain the Sybil attack\cite{douceur-sybil}
 and how it can be used in the MultiChain system to create an artificial reputation.
 An universallly applicable solution has not yet be found\cite{levine-sybilsurvey}.
 
