--- a/relatedWork/bartercast.tex
+++ b/relatedWork/bartercast.tex
@@ -1,8 +1,7 @@
 \section{BarterCast}
 BarterCast is the system used by Tribler to keep track of reputations\cite{pouwelse-buddycast}\cite{meulpolder-bartercast}\cite{meulpolder-bartercast-paper}\cite{dumitrescu-tribler}.
 It is fully decentralized in contrast to previous reputation systems in a peer-to-peer network.
-Private BitTorrent communities for example depend on central servers track reputations.
-\todo{source}
+Private BitTorrent communities for example depend on central servers track reputations\cite{meulpolder-bartercast}.
 BarterCast was not designed with the aim to be fully resistant to malicious nodes
 that want to falsify their reputations.
 The initial version has been first deployed in June 2006
