--- a/relatedWork/relatedWork.tex
+++ b/relatedWork/relatedWork.tex
@@ -1,4 +1,4 @@
-\chapter{Related Work}
+\chapter{Related work}
 In this chapter we will discuss related work on tamper-proof interaction histories.
 The block chain used in Bitcoin is explained extensively,
 because it has much similairity between MultiChain and understanding concepts in the block chain helps understanding MultiChain.
