--- a/introduction.tex
+++ b/introduction.tex
@@ -2,18 +2,14 @@
 \label{chp:introduction}
 Tribler is a peer-to-peer file sharing program developed by the Delft University of Technology for research purposes.
 Tribler expands the BitTorrent protocol and has added multiple improvements on this protocol.
-The main focus of Tribler is to make security and privacy the default for Internet users and impossible to shutdown.
+The main focus of Tribler is to make security and privacy the default for Internet users
+and impossible to shut these users down.
 A fully distributed program, not relying on any central component, is needed to achieve this.
 Tribler has been designed and build using this methodology\cite{Pouwelse-tribler}\cite{Bakker-tribler}.
-This master thesis was conducted as part of the research mission to improve Tribler.
-
-\vspace{1\baselineskip}
-
-\noindent
-\todo{ORGANISATIONAL DESCRIPTION OF THESIS}
+A distributed network requires collaboration of it peers to achieve success.
+This master thesis was conducted as part of the research mission to improve the collaboration within Tribler.
 
 \section{Tribler}
-\todo{update}
 In peer-to-peer file sharing a node called a seeder uploads parts
 of a file to another node, the downloader.
 The role of being a seeder and downloader constantly changes
@@ -22,7 +18,6 @@ A seeder can become a downloader when they wish to download other files
 and downloaders can become seeders,
 if they posses a file someone else wants.
 The ratio between the total size downloaded and uploaded is called the seeding ratio\cite{Cohen-bittorrent}.
-private community source
 
 The uploading can be seen as an interaction of one node helping another node.
 These interactions comes at the cost of consuming bandwidth for both parties.
@@ -50,7 +45,7 @@ and malicious nodes cannot abuse the network by tampering with the interaction h
 Tribler has recently implemented anonymous connections using onion routing \\\cite{Plak-anonymous}\cite{ruigrok-anonymous}.
 This feature allows downloaders to become indistinguishable from other users in the network.
 But every data packets has to be forwarded
-by a number of intermediate hop between the downloader and seeder\cite{Plak-anonymous}.
+by a number of intermediate hops between the downloader and seeder\cite{Plak-anonymous}.
 The requirement of forwarding packets increases the network load of data being sent.
 The total cost of bandwidth per file is increased,
 but also the number of nodes helping a single node downloading a file increases.
@@ -58,7 +53,17 @@ This in turn increases the necessity of an incentive system to reward collaborat
 
 \subsection{Dispersy}
 Dispersy is middleware for data dissemination in a network.
-Dispersy is used heavily within Tribler
-and is also the core library MultiChain has been build upon.
-Dispersy can also be used to exchange data between two specific nodes \cite{zeilemaker-dispersy}.
-Dispersy is used to exchange messages between nodes implementing MultiChain.
+Dispersy is used heavily within Tribler and maintained by the Tribler organisation.
+MultiChain is build upon Dispersy.
+Dispersy can be used to exchange data between two specific nodes \cite{zeilemaker-dispersy}
+and is used to exchange messages between nodes implementing MultiChain.
+An improvement was added to Dispersy during the thesis.
+
+\section{Document structure}
+In chapter 1 we give an overview of what Tribler is and the organization that develops Tribler.
+Chapter 2 gives a description of what the problem is of collaboration in peer-to-peer networks.
+Chapter 3 provides an overview of related work of different approaches in solving the problem.
+The design and implemention of the thesis work is described in chapter 4.
+The implementation is tested and the experiments and results are described in chapter 5.
+THe design has known vulnerabillities and these are explained in chapter 6.
+Finally, we discuss the results of the work in chapter 7.
