Restructured multiple histories.

--- a/design/design.tex
+++ b/design/design.tex
@@ -1,6 +1,7 @@
 \chapter{Design and implementation}
 
 \input{design/community.tex}
+\input{design/multiple-histories.tex}
 \input{design/chains.tex}
 \input{design/exchanging_blocks.tex}
 \input{design/mutual_exclusion.tex}
