--- a/problems/problems.tex
+++ b/problems/problems.tex
@@ -4,7 +4,7 @@ There are several known security vulnerabilities with the current design.
 As said in section \ref{pb-aim} an incremental approach was taken.
 As such, the design is part of a bigger system that as a whole is to be deployed in the real world.
 In this section we will describe the known vulnerabilities
-and explain the future work that is needed to solve these.
+and explain the future work that is needed to solve these vulnerabilities.
 
 \input{problems/branch.tex}
 \input{problems/sybil.tex}
