Many minor changes.

--- a/design/chains.tex
+++ b/design/chains.tex
@@ -1,5 +1,5 @@
 \section{Blocks inside the MultiChain}
-A peer will have transactions with other peers in the network.
+A peer will upload to and download from other peers in the network.
 The peer will want to increase his reputation and have a transaction transcribing his contribution.
 The transaction contains the information about how much data was uploaded and downloaded between the peers
 and their total upload and download amounts.
