--- a/design/crawler.tex
+++ b/design/crawler.tex
@@ -56,7 +56,7 @@ The two types of responses cannot be processed in the same way.
 A response to a signature requests has to influence the way a node responds to interactions
 and a crawler response should not.
 
-In the end the crawler uses recreation of a block from the local database and uses a new payload type to forward blocks.
+In the end, the crawler uses recreation of a block from the local database and uses a new payload type to forward blocks.
 The main reasons this implementation was chosen is
 that implemenation was very simple and had none of the above mentioned problems.
 Maintainabillity is also much easier this way
