--- a/experimentation/unittests.tex
+++ b/experimentation/unittests.tex
@@ -10,7 +10,9 @@ Unit tests are added to increase stability of MultiChain.
 Tribler does prove to be hard to test using unit tests.
 This is due to high coupling of code within Tribler.
 But mocking of classes helped in testing difficult to test code.
-Where possible and meaningfull unit tests were added and an overview of the coverage can be seen in Table \ref{tab:tests}
+The separate unit tests for the conversion, payload and database were the first of it types inside Tribler.
+\todo{Update the table}
+An overview of the coverage can be seen in Table \ref{tab:tests}
 
 \begin{table}
 \centering
