--- a/relatedWork/blockChain.tex
+++ b/relatedWork/blockChain.tex
@@ -1,4 +1,5 @@
 \section{Blockchain}
+\label{sect:bitcoin}
 Bitcoin is a digital currency that uses a interaction history
 to keep track of transactions made between nodes.
 The interaction history is a datastructure called the block chain.
@@ -191,10 +192,9 @@ then more blocks are generated and obviously more transactions can be fitted ins
 The reverse is true if the time is increased.
 But the time between blocks is a balance between the orphan rate of blocks
 and how fast transactions are committed to the blockchain.
-\todo{growth of blocks}
 
-\todo{source}
-These two factors currently result in a maximum of roughly 7 transactions per second.
+These two factors currently result in a theoretical limit of 7 transactions per second.
+\todo{Source?}
 The performance of Bitcoin can be changed by changing the settings of these two factors.
 This limits the usability of Bitcoins heavily.
 In comparison Visanet, that handles transactions under Visa, is able to process 54.000 transactions per second.
