--- a/relatedWork/relatedWork.tex
+++ b/relatedWork/relatedWork.tex
@@ -1,8 +1,10 @@
 \chapter{Related work}
 In this chapter we will discuss related work on tamper-proof interaction histories.
 The block chain used in Bitcoin is explained extensively,
-because it has much similairity between MultiChain and understanding concepts in the block chain helps understanding MultiChain.
+because there is much similairity between MultiChain.
+Understanding these concepts in the block chain helps understanding MultiChain.
 Bartercast is the current implemented reputation system used by Tribler that will be replaced by MultiChain.
+Several other related systems are finally briefly discussed.
 
 \input{relatedWork/blockChain.tex}
 
