--- a/thesis.tex
+++ b/thesis.tex
@@ -78,17 +78,17 @@
 % INTRODUCTION
 \include{introduction}
 %Problem description
-\input{problemDescription/problemDescription.tex}
+\include{problemDescription/problemDescription}
 %Related work
-\input{relatedWork/relatedWork.tex}
+\include{relatedWork/relatedWork}
 %Design
-\input{design/design.tex}
+\include{design/design}
 %Experimentation
-\input{experimentation/experimentation.tex}
+\include{experimentation/experimentation}
 %Problems
-\input{problems/problems.tex}
-
-
+\include{problems/problems}
+%Conclusion
+\include{conclusion/conclusion}
 
 % BIBLIOGRAPHY
 \bibliographystyle{bib/latex8}
