--- a/preface.tex
+++ b/preface.tex
@@ -11,16 +11,17 @@ But the block chain has several limitations in scalabillity
 that will limit Bitcoins in fully replacing traditional currencies with a digital currency.
 It also limits block chain as a scalable basis for a large scale reputation system, 
 similar to a digital currency, with vast amounts of transactions.
-This motivated to research the properties and possibilities of a variant of the block chain:
-multichain.
+These developments provides motivation to research the properties and possibilities of a variant of the block chain:
+MultiChain.
 
 \vspace{1\baselineskip}
 
 \noindent
 I would like to acknowledge several people that helped me during my master thesis.
-First I would to heartily thank dr.ir. Johan Pouwelse for his mentoring and helping me in setting goals and achieving these goals in a timely manner.
+First I would to heartily thank dr.ir. Johan Pouwelse for his mentoring and helping me in setting goals and achieving these goals.
 Furthermore I would like to thank dr.ir. Cor-Paul Bezemer for his guidance and help with implementing within Tribler. 
-I also would like to thank Elric Milon and Lipu Fei for answering countless questions and problems I encountered during the programming phase of my thesis.
+I also would like to thank Elric Milon and Lipu Fei for answering countless questions
+and problems I encountered during the programming phase of my thesis.
 For the excellent feedback and help to improve my code I would like to thank dr.ir. Niels Zeilemaker.
 His support by adding functionality to Dispersy was also invaluable.
 Rob Ruigrok was doing his master thesis at the same time
@@ -29,7 +30,6 @@ I am grateful for this help.
 I am also very thankful for the companionship I felt within my work room 
 and I would like to thank especially Hans Bogerts BSc, Niels Doekeijmeier BSc and Ernst van der Hoeven BSc.
 You certainly made my work more enjoyable.
-Lastly I want to thank the trainers at the Sports and Culture Centre of the Delft University of Technology for giving an challenging outlet outside of my master thesis.
 
 \vspace{1\baselineskip}
 
