--- a/design/chains.tex
+++ b/design/chains.tex
@@ -17,6 +17,7 @@ Both peers sign the whole block using their private keys to acknowledge that the
 Every block only contains one transaction.
 
 \subsection{Irrevocable proof-of-help}
+\label{sect:repudiation}
 Digital signatures have the property to be non-repudiable of origin \cite{VanderLubbe-crypto}.
 After signing a block the signer cannot later deny providing his signature.
 Only in the possesion of a secret key can a signature be made,
