--- a/problems/sybil.tex
+++ b/problems/sybil.tex
@@ -88,17 +88,13 @@ Several other defenses against the Sybil Attack have been proposed\cite{newsome-
 or variants on the defenses stated here\cite{levine-sybilsurvey}.
 But these either have the same limitation and are minor improvements or are non-applicable for MultiChain.
 
-\subsection{Possibility of attack and likelyhood of detecting fraud}
 For M to conduct the Sybil Attack he will need to generate a set of key pairs.
 This is trivial to do and Dispersy provides functionality to do this very easily.
-
-\todo{Timing of generating several keys}
-
 With these keys M has to generate blocks.
-
-\todo{timing of generating blocks}
 
 Sybil Attack can have a wide range of sophistication.
 Ranging from a large amount of fake identities with a large amount of transaction between them
 to a single, fake identity boosting the reputation of M in a couple of transaction.
 Even these simple Sybil Attack are hard to defend against if these are not done to obviously.
+
+\todo{Read finance proposal for solution/future work}
