--- a/problemDescription/problemDescription.tex
+++ b/problemDescription/problemDescription.tex
@@ -122,5 +122,6 @@ if more than half of the network consists of honest nodes.
 The overall aim of this thesis is to design, implement and conduct experiments with a tamper-proof interaction history
 implemented within Tribler.
 The interaction history will keep a history of the amount of data downloaded between nodes in the network.
+In the future this interaction history can be used to decide the level of cooperation with another node in the network
 An incremental approach is taken with this thesis as the first step in creating a fully tamper-proof interaction history.
 Several more steps are needed and these steps are explained in chapter \ref{problems}.
