Fixed subsection in Relatedwork

--- a/relatedWork/relatedWork.tex
+++ b/relatedWork/relatedWork.tex
@@ -10,7 +10,7 @@ Several other related systems are finally briefly discussed.
 
 \input{relatedWork/bartercast.tex}
 
-\subsection{Other related work}
+\section{Other related work}
 The topic of reputation system is currently a subject of research for other projects as well.
 There are two more projects worth to briefly mention because of similairity to the Tribler project
 and the struggle to build a reputation system.
