Design: introduction added

--- a/design/design.tex
+++ b/design/design.tex
@@ -1,4 +1,9 @@
 \chapter{Design and implementation}
+This chapter contains the design of MultiChain and how it was implemented.
+We will describe MultiChain is part of Tribler and its main pillar of design.
+The contents of blocks are presented and how they form chains in MultiChain.
+We will cover the creation of blocks and the multiple implications of the chosen design.
+Additional pheripheral systems that work with MultiChain are also explained.
 
 \input{design/community.tex}
 \input{design/multiple-histories.tex}
