Sybil: fixed typo

--- a/problems/sybil.tex
+++ b/problems/sybil.tex
@@ -95,4 +95,4 @@ With these keys M has to generate blocks.
 Sybil Attack can have a wide range of sophistication.
 Ranging from a large amount of fake identities with a large amount of transaction between them
 to a single, fake identity boosting the reputation of M in a couple of transaction.
-Even these simple Sybil Attack are hard to defend against if these are not done to obviously.
+Even the simple Sybil Attack are hard to defend against if these are not done too obviously.
