Design: added anonymity.

--- a/design/design.tex
+++ b/design/design.tex
@@ -14,3 +14,4 @@ Additional pheripheral systems that work with MultiChain are also explained.
 
 \input{design/integration.tex}
 \input{design/crawler.tex}
+\input{design/anonymity.tex}
