Added single block creation

--- a/experimentation/experimentation.tex
+++ b/experimentation/experimentation.tex
@@ -1,5 +1,6 @@
 \chapter{Experimentation}
 
 \input{experimentation/unittests.tex}
+\input{experimentation/singlerequest/singlerequest.tex}
 \input{experimentation/deadlock/deadlock.tex}
 
