--- a/thesis.tex
+++ b/thesis.tex
@@ -87,7 +87,7 @@
 
 % CHAPTERS ... For instance: History/Prior Work, Design/Implementation, Experiments
 % INTRODUCTION
-\include{introduction}
+\include{introduction/introduction}
 %Problem description
 \include{problemDescription/problemDescription}
 %Related work
